; ModuleID = '/home/carl/AnghaBench/linux/kernel/irq/extr_resend.c_check_irq_resend.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/irq/extr_resend.c_check_irq_resend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_desc = type { i32, i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (%struct.TYPE_4__*)* }

@IRQS_PENDING = common dso_local global i32 0, align 4
@IRQS_REPLAY = common dso_local global i32 0, align 4
@irqs_resend = common dso_local global i32 0, align 4
@resend_tasklet = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @check_irq_resend(%struct.irq_desc* %0) #0 {
  %2 = alloca %struct.irq_desc*, align 8
  store %struct.irq_desc* %0, %struct.irq_desc** %2, align 8
  %3 = load %struct.irq_desc*, %struct.irq_desc** %2, align 8
  %4 = call i64 @irq_settings_is_level(%struct.irq_desc* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = load i32, i32* @IRQS_PENDING, align 4
  %8 = xor i32 %7, -1
  %9 = load %struct.irq_desc*, %struct.irq_desc** %2, align 8
  %10 = getelementptr inbounds %struct.irq_desc, %struct.irq_desc* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = and i32 %11, %8
  store i32 %12, i32* %10, align 8
  br label %60

13:                                               ; preds = %1
  %14 = load %struct.irq_desc*, %struct.irq_desc** %2, align 8
  %15 = getelementptr inbounds %struct.irq_desc, %struct.irq_desc* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = load i32, i32* @IRQS_REPLAY, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %13
  br label %60

21:                                               ; preds = %13
  %22 = load %struct.irq_desc*, %struct.irq_desc** %2, align 8
  %23 = getelementptr inbounds %struct.irq_desc, %struct.irq_desc* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = load i32, i32* @IRQS_PENDING, align 4
  %26 = and i32 %24, %25
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %60

28:                                               ; preds = %21
  %29 = load i32, i32* @IRQS_PENDING, align 4
  %30 = xor i32 %29, -1
  %31 = load %struct.irq_desc*, %struct.irq_desc** %2, align 8
  %32 = getelementptr inbounds %struct.irq_desc, %struct.irq_desc* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = and i32 %33, %30
  store i32 %34, i32* %32, align 8
  %35 = load i32, i32* @IRQS_REPLAY, align 4
  %36 = load %struct.irq_desc*, %struct.irq_desc** %2, align 8
  %37 = getelementptr inbounds %struct.irq_desc, %struct.irq_desc* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 8
  %39 = or i32 %38, %35
  store i32 %39, i32* %37, align 8
  %40 = load %struct.irq_desc*, %struct.irq_desc** %2, align 8
  %41 = getelementptr inbounds %struct.irq_desc, %struct.irq_desc* %40, i32 0, i32 2
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %41, i32 0, i32 0
  %43 = load %struct.TYPE_3__*, %struct.TYPE_3__** %42, align 8
  %44 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i32 0, i32 0
  %45 = load i32 (%struct.TYPE_4__*)*, i32 (%struct.TYPE_4__*)** %44, align 8
  %46 = icmp ne i32 (%struct.TYPE_4__*)* %45, null
  br i1 %46, label %47, label %58

47:                                               ; preds = %28
  %48 = load %struct.irq_desc*, %struct.irq_desc** %2, align 8
  %49 = getelementptr inbounds %struct.irq_desc, %struct.irq_desc* %48, i32 0, i32 2
  %50 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %49, i32 0, i32 0
  %51 = load %struct.TYPE_3__*, %struct.TYPE_3__** %50, align 8
  %52 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %51, i32 0, i32 0
  %53 = load i32 (%struct.TYPE_4__*)*, i32 (%struct.TYPE_4__*)** %52, align 8
  %54 = load %struct.irq_desc*, %struct.irq_desc** %2, align 8
  %55 = getelementptr inbounds %struct.irq_desc, %struct.irq_desc* %54, i32 0, i32 2
  %56 = call i32 %53(%struct.TYPE_4__* %55)
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %59, label %58

58:                                               ; preds = %47, %28
  br label %59

59:                                               ; preds = %58, %47
  br label %60

60:                                               ; preds = %6, %20, %59, %21
  ret void
}

declare dso_local i64 @irq_settings_is_level(%struct.irq_desc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
